--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.6",
+    "multer": "^1.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
