--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.6",
+    "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
