--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   },
   "private": true,
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
